test: RentalServiceTest uses Visa + StandardPricing strategies
Made-with: Cursor